--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_vector_fields.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_vector_fields.tex
@@ -5,7 +5,7 @@
 \begin{column}{0.7\textwidth}
 Let \( T:\mm\to BS^1 \) be an oriented tangent bundle on a 2-dim combinatorial manifold.
 \begin{itemize}
-\item Bundles of circles can only model \alert{nonzero} tangent vectors.
+\item Our bundles of mere circles can only model \alert{nonzero} tangent vectors.
 \item  A global section would be a trivialization of \( T \), so there is an obstruction.
 \end{itemize}
 \quad\\~\\
@@ -13,7 +13,7 @@ Let \( T:\mm\to BS^1 \) be an oriented tangent bundle on a 2-dim combinatorial m
 Our solution:
 \begin{itemize}
 \item<3-> A \alert{vector field} is a term \alert{\( X:\pit{m:\mm_1}Tm \)}.
-\item<4-> It's a \alert{nonvanishing} vector field on the 1-skeleton.
+\item<4-> It models a classical \alert{nonvanishing} vector field on the 1-skeleton.
 \item<5-> We model classical zeros by omitting the faces.
 \end{itemize}
 }
@@ -53,12 +53,7 @@ Next goal: define the index of a vector field on a face.
 \endgroup
 \end{column}
 \begin{column}{0.35\textwidth}
-We will try to show the \alert{three} ingredients of \( X \) on this face:
-\begin{itemize}
-\item The value of \( X \) on vertices.
-\item The value of \( X \) on edges.
-\item The transport between vertices, interacting with \( X \).
-\end{itemize}
+An example of \alert{swirling} and \alert{index} at this face.
 \end{column}
 \end{columns}
 \end{frame}
@@ -73,10 +68,11 @@ We will try to show the \alert{three} ingredients of \( X \) on this face:
 \endgroup
 \end{column}
 \begin{column}{0.35\textwidth}
+An example of \alert{swirling} and \alert{index} at this face.
 \begin{itemize}
 \item<1-> Denote by \( X_1 \) this vector \( X(v_1):T_1 \).
 \item<1-> \phantom{Say \( T_{12} \) is trivial. Denote the transported vector as thinner.}
-\item<1-> \phantom{Say \( T_{23} \) rotates counterclockwise. Denote the twice-transported vector as dashed.}
+\item<1-> \phantom{Say \( T_{23} \) rotates clockwise. Denote the twice-transported vector as dashed.}
 \item<1-> \phantom{Say \( T_{31} \) is trivial. The thrice-transported vecor is dotted.}
 \end{itemize}
 \end{column}
@@ -93,10 +89,11 @@ We will try to show the \alert{three} ingredients of \( X \) on this face:
 \endgroup
 \end{column}
 \begin{column}{0.35\textwidth}
+An example of \alert{swirling} and \alert{index} at this face.
 \begin{itemize}
 \item<1-> Denote by \( X_1 \) this vector \( X(v_1):T_1 \).
 \item<1-> Say \( T_{12} \) is trivial. Denote the transported vector as thinner.
-\item<1-> \phantom{Say \( T_{23} \) rotates counterclockwise. Denote the twice-transported vector as dashed.}
+\item<1-> \phantom{Say \( T_{23} \) rotates clockwise. Denote the twice-transported vector as dashed.}
 \item<1-> \phantom{Say \( T_{31} \) is trivial. The thrice-transported vecor is dotted.}
 \end{itemize}
 \end{column}
@@ -113,10 +110,11 @@ We will try to show the \alert{three} ingredients of \( X \) on this face:
 \endgroup
 \end{column}
 \begin{column}{0.35\textwidth}
+An example of \alert{swirling} and \alert{index} at this face.
 \begin{itemize}
 \item<1-> Denote by \( X_1 \) this vector \( X(v_1):T_1 \).
 \item<1-> Say \( T_{12} \) is trivial. Denote the transported vector as thinner.
-\item<1-> Say \( T_{23} \) rotates counterclockwise. Denote the twice-transported vector as dashed.
+\item<1-> Say \( T_{23} \) rotates clockwise. Denote the twice-transported vector as dashed.
 \item<1-> \phantom{Say \( T_{31} \) is trivial. The thrice-transported vecor is dotted.}
 \end{itemize}
 \end{column}
@@ -133,10 +131,11 @@ We will try to show the \alert{three} ingredients of \( X \) on this face:
 \endgroup
 \end{column}
 \begin{column}{0.35\textwidth}
+An example of \alert{swirling} and \alert{index} at this face.
 \begin{itemize}
 \item<1-> Denote by \( X_1 \) this vector \( X(v_1):T_1 \).
 \item<1-> Say \( T_{12} \) is trivial. Denote the transported vector as thinner.
-\item<1-> Say \( T_{23} \) rotates counterclockwise. Denote the twice-transported vector as dashed.
+\item<1-> Say \( T_{23} \) rotates clockwise. Denote the twice-transported vector as dashed.
 \item<1-> Say \( T_{31} \) is trivial. The thrice-transported vecor is dotted.
 \end{itemize}
 \end{column}
@@ -157,6 +156,7 @@ We will try to show the \alert{three} ingredients of \( X \) on this face:
 \item<1-> \( X \) on \( e_{12} \) is red, etc.
 \item<2-> We translated all results to the end of the loop.
 \item<3-> (Reminds me of scooping ice cream towards the last fiber.)
+\item<4-> The total pathover is called \alert{the swirling \( X_F \)} of \( X \) at the face \( F \).
 \end{itemize}
 \end{column}
 \end{columns}
