--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/figs/face_swirl_bare_tikz.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/figs/face_swirl_bare_tikz.tex
@@ -1,21 +1,53 @@
 \begin{tikzpicture}
-  [arrow/.style={-{Stealth[scale=1.1]}}, vec/.style={ultra thick, color=black}, vectr/.style={thick, color=black}, vectrtr/.style={thick, dashed, color=black}, vectrtrtr/.style={thick, dotted, color=black}]
+  [arrow/.style={-{Stealth[scale=1.1]}}, vec/.style={ultra thick, color=black, opacity=0.0}, vectr/.style={thick, color=black, opacity=0.0}, vectrtr/.style={thick, dashed, color=black, opacity=0.0}, vectrtrtr/.style={thick, dotted, color=black, opacity=0.0}]
   \tikzset{oo/.style={circle, scale=0.6, fill=black}}
-  \tikzset{ii/.style={circle, scale=0.3, fill=gray}}
-\newlength{\mylen}
-  \setlength{\mylen}{3cm}
+  \tikzset{ii/.style={circle, scale=0.3, fill=gray, opacity=0.0}}
+  \tikzset{dashedd/.style={color=black, opacity=0.0}}
+  \newlength{\mylen}
   \newlength{\mylin}
-  \setlength{\mylin}{0.5cm}
-    \node[oo, label=below:\( v_1 \)] (V1) at (0, 0) {};
-    \node[oo, label=below:\( v_2 \)] (V2) at (2*\mylen, 0) {};
-    \node[oo, label=above:\( v_3 \)] (V3) at (\mylen, 1.732*\mylen) {};
+  \setlength{\mylen}{3cm}
+  \setlength{\mylin}{1.2cm}
+    \node[oo, label=below right:\( v_1 \)] (V1) at (0, 0) {};
+    \node[oo, label=below:\( v_3 \)] (V3) at (2*\mylen, 0) {};
+    \node[oo, label=above:\( v_2 \)] (V2) at (\mylen, 1.732*\mylen) {};
 
     \draw[arrow] (V2) edge[very thick, color=teal, "\( e_{23} \)"] (V3);
     \draw[arrow] (V1) edge[very thick, color=magenta, "\( e_{12} \)"] (V2);
     \draw[arrow] (V3) edge[very thick, color=blue, "\( e_{31} \)"] (V1);
     
+    \node [ii, above right=\mylin of V1] (V11) {};
+    \node [ii, below right=\mylin of V1] (V14) {};
+    \node [ii, below left=\mylin of  V1] (V13) {};
+    \node [ii, above left= \mylin of V1] (V12) {};
+
     \node [left=1.3\mylin of  V1,  label=center:\( T_1 \)] {};
     \node [right=1.3\mylin of  V2,  label=center:\( T_2 \)] {};
-    \node [left=1.3\mylin of  V3,  label=center:\( T_3 \)] {};
+    \node [right=1.3\mylin of  V3,  label=center:\( T_3 \)] {};
 
+    \node [ii, above right=\mylin of V2] (V21) {};
+    \node [ii, below right=\mylin of V2] (V24) {};
+    \node [ii, below left=\mylin of  V2] (V23) {};
+    \node [ii, above left= \mylin of V2] (V22) {};
+
+    \node [ii, above right=\mylin of V3] (V31) {};
+    \node [ii, below right=\mylin of V3] (V34) {};
+    \node [ii, below left=\mylin of  V3] (V33) {};
+    \node [ii, above left= \mylin of V3] (V32) {};
+
+    \draw[dashedd] (V11) -- (V12);
+    \draw[dashedd] (V12) -- (V13);
+    \draw[dashedd] (V13) -- (V14);
+    \draw[dashedd] (V14) -- (V11);
+
+    \draw[dashedd] (V21) -- (V22);
+    \draw[dashedd] (V22) -- (V23);
+    \draw[dashedd] (V23) -- (V24);
+    \draw[dashedd] (V24) -- (V21);
+    
+    \draw[dashedd] (V31) -- (V32);
+    \draw[dashedd] (V32) -- (V33);
+    \draw[dashedd] (V33) -- (V34);
+    \draw[dashedd] (V34) -- (V31);
+    
+    \draw[arrow] (V1) edge[vec] (V11);
 \end{tikzpicture}
