--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_combman.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_combman.tex
@@ -83,8 +83,7 @@ In particular the 0-sphere \( \partial\Dd(1)\defeq \partial \Delta(1)_0 \).
 
 \begin{frame}{Homotopy realization: dimension 1}
 For a 1-dim complex \( M\defeq [M_0,M_1] \) the realization is given by
-\[\input{figs/realization_dim1_tikz.tex}
-\]
+\[\input{figs/realization_dim1_bolddelta_tikz.tex}\]
 \end{frame}
 
 \begin{frame}{Homotopy realization: dimension 1}
