--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_connections.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_connections.tex
@@ -1,7 +1,7 @@
 \section{Connections and curvature}
 
 \begin{frame}{Connections}
-Connections are extensions of the bundle to higher skeleta.
+Connections are extensions of a bundle to higher skeleta.
 \end{frame}
 
 \begin{frame}{Recall \( \link \)}
@@ -63,7 +63,6 @@ Let \( H_{wbr}:\refl_{w}=_{w=_{\mm}w}\partial(wbr) \) be the filler homotopy of 
 
 \tikzset{every picture/.style={scale=0.85}}
 \[\input{figs/discrete_gauge_theory_oo_transport_tikz}\]
-(Subtle remark: \( R \) and \( H_R \) are constructed at the HIT level. The HoTT path is the \alert{realization} of \( H_R \).)
 \end{frame}
 
 % \begin{frame}{Rotation}
@@ -89,7 +88,7 @@ Let \( H_{wbr}:\refl_{w}=_{w=_{\mm}w}\partial(wbr) \) be the filler homotopy of 
 \begin{frame}{The definition of a connection}
 \begin{definition}
 If \( \mm\defeq \mm_0\xrightarrow[]{\imath_0}\cdots\xrightarrow[]{\imath_{n-1}}\mm_n \) is the realization of a combinatorial manifold and all the triangles commute in the diagram:
-\[\begin{tikzcd}[ampersand replacement=\&, column sep=small]
+\[\begin{tikzcd}[ampersand replacement=\&, row sep=large]
   {\mm_0} \& {\mm_1} \& {\mm_2} \& \cdots \& {\mm_n} \\
 \&\& {\mathcal{U}}
 \arrow["{\imath_0}", from=1-1, to=1-2]
