--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -46,6 +46,8 @@ This thesis is dedicated to John Baez, Sean M. Carroll, Sabine Hossenfelder, and
 %\listoftodos
 \clearpage
 
+\newlength{\mylen}
+\newlength{\mylin}
 
 \tableofcontents 
 \clearpage
