--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_vector_fields.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_vector_fields.tex
@@ -48,7 +48,7 @@ Our solution:
 \end{frame}
 
 \begin{frame}
-Next goal: define the index of a vector field on a face.
+Next goal: define the index of a vector field on a face by computing \( X(\partial F) \) around a face.
 \end{frame}
 
 \begin{frame}
