--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
@@ -47,7 +47,7 @@ As we traverse an edge, say \( e_{12} \), we get a path in \( T_2 \) which is th
 \begin{figure}[h]
 \centering
 \input{figs/face_swirl_tikz.tex}
-\caption{A vector field swirling counterclockwise around a face, in a bundle of squares. Imagine that transport along \( e_{12} \) does not rotate along the page, that transport along \( e_{23} \) rotates counterclockwise by 90 degrees, and that transport along \( e_{31} \) again does not rotate along the page. Thick black vectors are the vector field at a point. Thin vectors are transported once, dashed twice, and dotted three times. The vertices \( v_{ij} \) are in the tangent fibers. If you have a colorized version of the document, the colors of the arrows correspond: the red edge produced the red edge in the fibers.}
+\caption{A vector field swirling clockwise around a face, in a bundle of squares. Imagine that transport along \( e_{12} \) does not rotate along the page, that transport along \( e_{23} \) rotates clockwise by 90 degrees, and that transport along \( e_{31} \) again does not rotate along the page. Thick black vectors are the vector field at a point. Thin vectors are transported once, dashed twice, and dotted three times. The vertices \( v_{ij} \) are in the tangent fibers. If you have a colorized version of the document, the colors of the arrows correspond: the red edge produced the red edge in the fibers.}
 \label{fig:swirling}
 \end{figure}
 
