--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -258,7 +258,8 @@
 \newcommand{\gr}[1]{[{#1}]} % geometric realization
 \newcommand{\hgr}[1]{\llb{#1}\rrb} % higher geometric realization of anonymous data
 \newcommand{\joinrell}{\mathrel{\mkern-3mu}}
-\newcommand{\Dd}{\Delta\!\!\!\!{\scalebox{0.7}{$\Delta$}}}
+%\newcommand{\Dd}{\Delta\!\!\!\!{\scalebox{0.7}{$\Delta$}}}
+\newcommand{\Dd}{\Delta\mkern-11mu{\scalebox{0.7}{$\Delta$}}}
 
 \newenvironment{dedication}
 {\clearpage           % we want a new page
