--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk.tex
@@ -1,4 +1,4 @@
-\documentclass[handout,13pt,aspectratio=169]{beamer}
+\documentclass[13pt,aspectratio=169]{beamer}
 \usetheme{default}
 
 % something tries to renewcommand these but beamer must break the assumption that they are defined so I am defining them
@@ -41,15 +41,15 @@
 %%
 %% FOR PRINTING, COMMENT THESE
 %%
-% \logo{\vspace{-4pt}\includegraphics[width=100pt]{figs/cmu-wordmark-horizontal-r.pdf}\quad}
-% \useoutertheme[subsection=false]{miniframes}
-% \setbeamercolor{alerted text}{fg=cmu_red}
+\logo{\vspace{-4pt}\includegraphics[width=100pt]{figs/cmu-wordmark-horizontal-r.pdf}\quad}
+\useoutertheme[subsection=false]{miniframes}
+\setbeamercolor{alerted text}{fg=cmu_red}
 
 %%
 %% FOR PRINTING, UNCOMMENT THESE AND ADD "handout" to beamer options in line 1
 %%
-\setbeamercolor{alerted text}{fg=black}
-\setbeamerfont{alerted text}{series=\ifmmode\else\bfseries\fi}
+% \setbeamercolor{alerted text}{fg=black}
+% \setbeamerfont{alerted text}{series=\ifmmode\else\bfseries\fi}
 
 \newcommand{\nologo}{\setbeamertemplate{logo}{}}
 \title[Geometry in HoTT]{Discrete differential geometry in homotopy type theory}
